decomp_debug.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/michael/Desktop/mssb-dtk/tools/langgraph_decomp/__main__.py", line 2, in <module>
    from tools.langgraph_decomp.cli import main
  File "/home/michael/Desktop/mssb-dtk/tools/langgraph_decomp/cli.py", line 25, in <module>
    from tools.langgraph_decomp.graph import build_graph
  File "/home/michael/Desktop/mssb-dtk/tools/langgraph_decomp/graph.py", line 15, in <module>
    from .state import DecompState
  File "/home/michael/Desktop/mssb-dtk/tools/langgraph_decomp/state.py", line 5, in <module>
    from .llm import clean_code_block
  File "/home/michael/Desktop/mssb-dtk/tools/langgraph_decomp/llm.py", line 91
    }}
     ^
SyntaxError: f-string: single '}' is not allowed
